create jar for testing